add lecture, subscription sections

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,4 +1,15 @@
 .events {
+  &__content {
+    margin-bottom: 60px;
+
+    @include on-tablet {
+      margin-bottom: 112px;
+    }
+
+    @include on-desktop {
+      margin-bottom: 104px;
+    }
+  }
 
   &__title {
     margin: 70px 0 40px;
@@ -24,14 +35,23 @@
     @include on-desktop {
       gap: 104px;
     }
-
   }
 }
 
 .event {
   align-items: center;
+  gap: 20px;
+
+  @include on-tablet {
+    gap: 40px;
+  }
+
+  @include on-desktop {
+    gap: 104px;
+  }
 
   @include grid-page;
+
 
   &__img {
     width: 100%;
@@ -39,6 +59,23 @@
 
     @include on-desktop {
       grid-column: 1 / 8;
+    }
+
+    &--last {
+      width: 100%;
+      height: 210px;
+      margin-top: 60px;
+      position: relative;
+
+      @include on-tablet {
+        height: 390px;
+        margin-top: 64px;
+      }
+
+      @include on-desktop {
+        height: 550px;
+        margin-top: 104px;
+      }
     }
   }
 
@@ -53,7 +90,6 @@
       grid-column: 9 / -1;
       align-items: center;
     }
-
   }
 
   &__type {
@@ -82,9 +118,14 @@
   }
 
   &__title {
+    display: flex;
+    justify-content: flex-start;
+    gap: 12px;
+    text-align: left;
     margin-bottom: 10px;
 
     @include on-tablet {
+      gap: 20px;
       margin-bottom: 15px;
     }
   }
