--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,8 +8,7 @@
 @import 'blocks/tickets';
 @import 'blocks/events';
 @import 'blocks/title';
-
-
-body {
-  background: $bg-color;
-}
+@import 'blocks/stylistic-square';
+@import 'blocks/lecture';
+@import 'blocks/subscription';
+@import 'blocks/button';
