--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -12,6 +12,8 @@ $desktop-min-width: 1280px;
 $columns-on-mobile: 2;
 $columns-on-tablet: 6;
 $columns-on-desktop: 12;
+$accent-color: #F14A27;
+
 
 
 
