add HAMY website

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,55 @@
+$main-black: #0F0E08;
+$c-green: #1A5A4C;
+$ibm-font: IBM Plex Sans;
+$c-orange: #F14A27;
+$size-of-bg-photo: 550px;
+
 @import "utils";
-@import "fonts";
 @import "typography";
+@import "./Blocks/header";
+@import "./Blocks/menu";
+@import "./Blocks/current-events";
+@import "./Blocks/classicism";
+@import "./Blocks/gallery";
+@import "./Blocks/subscribe";
+@import "./Blocks/footer";
 
 body {
-  background: $c-gray;
+  font-family: Montserrat, $ibm-font, sans-serif;
+  margin: 0;
+}
+
+html:has(.menu:target) {
+  overflow: hidden;
+}
+
+.page__padding {
+  padding-left: 55px;
+  padding-right: 55px;
+  font-size: 14px;
+
+  @media (max-width: 1280px){
+    padding-left: 39px;
+    padding-right: 39px;
+  }
+
+  @media (max-width: 768px){
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
+h2, p, h1, ul, li, span, nav {
+  margin: 0;
+}
+
+ul {
+  padding: 0;
+}
+
+h2 {
+  font-family: Montserrat, sans-serif;
+
+  font-size: 48px;
+  font-weight: 700;
 }
