--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -13,15 +13,12 @@
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
-
     height: 300px;
     width: 100%;
     position: absolute;
-
     top: 0;
     right: 0;
     z-index: -1;
-
 
     @include on-tablet {
       height: 374px;
@@ -30,7 +27,7 @@
 
     @include on-desktop {
       height: 655px;
-      width: 55vw;
+      width: 55%;
     }
   }
 
@@ -43,7 +40,6 @@
   &__top {
     display: flex;
     height: 70px;
-    line-height: 70px;
     align-items: center;
     width: 100%;
     grid-column: 1 / -1;
@@ -56,27 +52,18 @@
   }
 
   &__logo {
-    display: flex;
-
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    height: 61px;
-    object-position: center;
-
 
     @include on-tablet {
-      height: 70px;
-      line-height: 70px;
       transform: translateX(80px);
     }
 
     @include on-desktop {
-      left: 44%;
+      left: 42%;
     }
   }
-
-
 
   &__inform {
     display: flex;
@@ -129,7 +116,5 @@
     left: 0;
     bottom: 0;
     transform: rotate(-0.25turn) translateX(-50%);
-
   }
-
 }
