--- a/src/styles/blocks/icons.scss
+++ b/src/styles/blocks/icons.scss
@@ -1,5 +1,49 @@
+.icons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  @include on-tablet {
+    flex-direction: column;
+    row-gap: 62px;
+    align-items: start;
+    justify-content: flex-start;
+  }
+
+  &__social {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+
+    @include on-tablet {
+      gap: 32px;
+    }
+
+    @include on-tablet {
+      gap: 22px;
+    }
+  }
+}
+
+.logo {
+  &__img {
+    height: 61px;
+    object-position: center;
+
+    @include on-tablet {
+      height: 70px;
+      line-height: 70px;
+    }
+  }
+}
+
 .menu-icon {
   background-image: url(../images/icons/baseline-menu.svg);
+  height: 24px;
+  width: 24px;
+}
+
+.social-icon {
   height: 24px;
   width: 24px;
 }
