--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -78,7 +78,16 @@
   }
 
   &__input {
+    font-family: Montserrat, sans-serif;
+    font-size: 14px;
+    line-height: 14px;
     flex-grow: 1;
-  }
+    padding-inline: 24px;
+    color: $events-title-color;
+    border: none;
 
+    @include on-tablet {
+      padding-inline: 32px;
+    }
+  }
 }
