--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -37,6 +37,10 @@
   color: $events-title-color;
   text-transform: uppercase;
 
+  &--header {
+    font-weight: 700;
+  }
+
   @include on-tablet {
     font-size: 14px;
     line-height: 14px;
