--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,3 +12,8 @@
 @import 'blocks/lecture';
 @import 'blocks/subscription';
 @import 'blocks/button';
+@import 'blocks/schedule-address';
+@import 'blocks/nav';
+@import 'blocks/stylistic-line';
+@import 'blocks/designed-by';
+@import 'blocks/footer';
