--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -2,17 +2,19 @@
   height: 50px;
   width: 50px;
   box-sizing: border-box;
-  background-image: url(../images/icons/button.svg);
+  background-image: url(../images/icons/button-white.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-color: $menu-bg-color;
+  border: none;
+
+  &--black {
+    background-image: url(../images/icons/button-black.svg);
+    background-color: $accent-color;
+  }
 
   @include on-tablet {
     height: 70px;
     width: 70px;
-  }
-
-  &--subscription {
-    background-color: $accent-color;
   }
 }
