--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,49 +1,3 @@
-// .ibm-plex sans-extralight {
-//   font-family: "IBM Plex Sans", sans-serif;
-//   font-weight: 200;
-//   font-style: normal;
-// }
-
-// .ibm-plex sans-light {
-//   font-family: "IBM Plex Sans", sans-serif;
-//   font-weight: 300;
-//   font-style: normal;
-// }
-
-// .ibm-plex sans-regular {
-//   font-family: "IBM Plex Sans", sans-serif;
-//   font-weight: 400;
-//   font-style: normal;
-// }
-
-// .ibm-plex sans-medium {
-//   font-family: "IBM Plex Sans", sans-serif;
-//   font-weight: 500;
-//   font-style: normal;
-// }
-
-// .ibm-plex sans-semibold {
-//   font-family: "IBM Plex Sans", sans-serif;
-//   font-weight: 600;
-//   font-style: normal;
-// }
-
-// .ibm-plex sans-bold {
-//   font-family: "IBM Plex Sans", sans-serif;
-//   font-weight: 700;
-//   font-style: normal;
-// }
-
-// // <uniquifier>: Use a uniquifier for the class name
-// // <weight>: Use a value from 100 to 900
-
-// .montserrat-<uniquifier> {
-//   font-family: "Montserrat", sans-serif;
-//   font-optical-sizing: auto;
-//   font-weight: <weight>;
-//   font-style: normal;
-// }
-
 * {
   padding: 0;
   margin: 0;
@@ -51,12 +5,12 @@
 }
 
 .page {
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: "IBM Plex Sans", sans-serif;
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
 
-p {
+a {
   text-decoration: none;
 }
 
