add gallery, menu

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -44,6 +44,7 @@
   &__address {
     grid-column: 2 / -1;
     grid-row: 2 / 3;
+    position: relative;
 
     @include on-tablet {
       grid-column: 4 / 6;
@@ -87,6 +88,12 @@
       grid-column: 8 / 12;
       grid-row: 1 / -1;
     }
+  }
+
+  &__arrow-up {
+    position: absolute;
+    bottom: -50px;
+    right: 0;
   }
 
   &__designed-by {
