--- a/src/styles/blocks/icons.scss
+++ b/src/styles/blocks/icons.scss
@@ -29,6 +29,7 @@
   &__img {
     height: 61px;
     object-position: center;
+    padding: 2px;
 
     @include on-tablet {
       height: 70px;
@@ -44,6 +45,28 @@
 }
 
 .social-icon {
+  height: 24px;
+  width: 24px;
+}
+
+.arrow-up {
+  background-image: url(../images/icons/arrow-up.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 50px;
+  width: 50px;
+
+  @include on-tablet {
+    display: none;
+  }
+}
+
+.close-icon {
+  display: block;
+  background-image: url(../images/icons/ri-close-fill.svg);
+  background-position: center;
+  background-repeat: no-repeat;
   height: 24px;
   width: 24px;
 }
