--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -9,10 +9,22 @@
   }
 
   &__link {
+    display: block;
     font-size: 14px;
     font-weight: 400;
     line-height: 100%;
     color: $dark-main-color;
     text-decoration: none;
+
+    &--menu {
+      color: $light-main-color;
+      font-size: 16px;
+      font-weight: 500;
+
+      @include on-desktop {
+        font-size: 22px;
+        line-height: 22px;
+      }
+    }
   }
 }
