--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -8,9 +8,24 @@
   font-family: "IBM Plex Sans", sans-serif;
   scroll-behavior: smooth;
   overflow-x: hidden;
+
+  &__menu {
+    position: fixed;
+    right: 0;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    pointer-events: none;
+
+    &:target {
+      opacity: 1;
+      pointer-events: all;
+    }
+  }
 }
 
 a {
   text-decoration: none;
+  cursor: pointer;
 }
 
