--- a/src/styles/blocks/schedule-address.scss
+++ b/src/styles/blocks/schedule-address.scss
@@ -1,5 +1,4 @@
 .schedule-address {
-  font-size: 14px;
 
   &__title {
     font-size: 14px;
@@ -12,5 +11,21 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 21px;
+
+    @include on-tablet {
+      width: 170px;
+    }
+  }
+
+  &__wrapper {
+    gap: 16px;
+    display: flex;
+    flex-direction: column;
+
+    @include on-tablet {
+      width: 340px;
+      flex-direction: row;
+      gap: 26px;
+    }
   }
 }
