add animation, links

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -77,6 +77,8 @@
         margin-top: 104px;
       }
     }
+
+    @include hover-effect (transform, scale(1.1));
   }
 
   &__text-block {
@@ -139,12 +141,17 @@
 }
 
 .events-link {
-  display: none;
-  gap: 20px;
-  align-items: center;
 
-  @include on-desktop {
-    display: flex;
+  &__wrapper {
+    display: none;
+    gap: 20px;
+    align-items: center;
+
+    @include on-desktop {
+      display: flex;
+    }
+
+    @include hover-effect-effect (transform, scale(1.2));
   }
 
   &__line {
