--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -92,6 +92,7 @@
     line-height: 45px;
     text-transform: uppercase;
     text-align: center;
+    color: $dark-title-color;
 
     @include on-tablet {
       font-size: 54px;
@@ -110,6 +111,8 @@
     @include on-desktop {
       align-self: flex-end;
     }
+
+    @include hover-effect (transform, scale(1.1));
   }
 
   &__events {
