--- a/src/styles/blocks/icons.scss
+++ b/src/styles/blocks/icons.scss
@@ -35,6 +35,8 @@
       height: 70px;
       line-height: 70px;
     }
+
+    @include hover-effect (transform, scale(1.2));
   }
 }
 
@@ -42,11 +44,15 @@
   background-image: url(../images/icons/baseline-menu.svg);
   height: 24px;
   width: 24px;
+
+  @include hover-effect (transform, scale(1.4));
 }
 
 .social-icon {
   height: 24px;
   width: 24px;
+
+  @include hover-effect (transform, scale(1.2));
 }
 
 .arrow-up {
@@ -60,6 +66,8 @@
   @include on-tablet {
     display: none;
   }
+
+  @include hover-effect (transform, scale(1.2));
 }
 
 .close-icon {
@@ -69,4 +77,6 @@
   background-repeat: no-repeat;
   height: 24px;
   width: 24px;
+
+  @include hover-effect (transform, scale(1.4));
 }
