--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,6 +1,7 @@
 .menu {
   background-color: rgba(0, 0, 0, .5);
   height: 100vh;
+  z-index: 1;
 
   &__wrapper {
     background-color: $menu-bg-color;
