--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -8,6 +8,7 @@
   font-family: "IBM Plex Sans", sans-serif;
   scroll-behavior: smooth;
   overflow-x: hidden;
+  color: $dark-main-color;
 
   &__menu {
     position: fixed;
