--- a/src/styles/blocks/schedule-address.scss
+++ b/src/styles/blocks/schedule-address.scss
@@ -1,19 +1,31 @@
 .schedule-address {
+  color: $dark-main-color;
 
   &__title {
     font-size: 14px;
     font-weight: 400;
     line-height: 20px;
     margin-bottom: 20px;
+    color: $light-main-color;
+
+    &--footer {
+      color: $dark-main-color;
+    }
   }
 
   &__description {
     font-size: 14px;
     font-weight: 400;
     line-height: 21px;
+    text-decoration: none;
+    color: $light-main-color;
 
     @include on-tablet {
       width: 170px;
+    }
+
+    &--footer {
+      color: $dark-main-color;
     }
   }
 
