--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -21,7 +21,6 @@
   line-height: 28px;
   text-align: center;
 
-
   @include on-tablet {
     text-align: left;
     font-size: 36px;
@@ -39,6 +38,8 @@
 
   &--header {
     font-weight: 700;
+
+    @include hover-effect (color, $dark-main-color);
   }
 
   @include on-tablet {
