--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -46,3 +46,10 @@
     grid-template-columns: repeat($columns-on-desktop, 1fr);
   }
 }
+
+@mixin hover-effect($proprty, $toValue) {
+  transition: #{$proprty} $effect-duretion;
+  &:hover {
+    #{$proprty}: #{$toValue};
+  }
+}
