--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -7,14 +7,18 @@
   background-repeat: no-repeat;
   background-color: $menu-bg-color;
   border: none;
+  cursor: pointer;
 
   &--black {
     background-image: url(../images/icons/button-black.svg);
     background-color: $accent-color;
+
+    @include hover-effect (transform, scale(1.1));
   }
 
   @include on-tablet {
     height: 70px;
     width: 70px;
   }
+
 }
