--- a/src/styles/blocks/gallery-descktop.scss
+++ b/src/styles/blocks/gallery-descktop.scss
@@ -18,7 +18,6 @@
     &--1 {
       grid-column: 1 / 5;
       grid-row: 1 / 2;
-      height: 600px;
 
     }
     &--2 {
@@ -39,8 +38,11 @@
 
   &__img {
     object-fit: cover;
+
     height: 100%;
     width: 100%;
     object-position: center;
+
+    @include hover-effect (transform, scale(1.05));
   }
 }
