--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -25,6 +25,10 @@
         font-size: 22px;
         line-height: 22px;
       }
+
+      @include hover-effect (transform, scale(1.1));
     }
+
+    @include hover-effect (font-weight, 700);
   }
 }
