add animation, links

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -151,7 +151,7 @@
       display: flex;
     }
 
-    @include hover-effect-effect (transform, scale(1.2));
+    @include hover-effect (transform, scale(1.2));
   }
 
   &__line {
