--- a/src/styles/blocks/schedule-address.scss
+++ b/src/styles/blocks/schedule-address.scss
@@ -27,6 +27,10 @@
     &--footer {
       color: $dark-main-color;
     }
+
+    &--addess{
+      @include hover-effect(font-weight, 500);
+    }
   }
 
   &__wrapper {
