--- a/src/styles/blocks/schedule-address.scss
+++ b/src/styles/blocks/schedule-address.scss
@@ -27,10 +27,6 @@
     &--footer {
       color: $dark-main-color;
     }
-
-    &--addess{
-      @include hover-effect(font-weight, 500);
-    }
   }
 
   &__wrapper {
@@ -43,5 +39,13 @@
       flex-direction: row;
       gap: 26px;
     }
+  }
+
+  &__link {
+    display: inline-block;
+    text-decoration: none;
+    color: $dark-main-color;
+
+    @include hover-effect(text-decoration, underline);
   }
 }
