LandingMuseum fix and changing size

--- a/src/styles/Blocks/footer.scss
+++ b/src/styles/Blocks/footer.scss
@@ -6,18 +6,31 @@
   grid-template-columns: repeat(var(--column), 1fr);
   margin-bottom: 35px;
 
-  @media (max-width: 1280px){
+  @media (max-width: 1024px){
     --column: 6;
   }
 
-  @media (max-width: 768px){
+  @media (max-width: 640px){
     --column: 2;
 
     margin-bottom: 70px;
   }
+  &__arrow {
+    display: none;
+    transition: transform 500ms;
 
+    &:hover {
+      transform: scale(1.2);
+    }
+
+    @media (max-width: 640px){
+      display: block;
+      grid-column: 2 / -1;
+      justify-self: flex-end;
+    }
+  }
   &__logo {
-    @media (max-width: 768px){
+    @media (max-width: 640px){
       grid-column: 1 / -1;
       display: grid;
       column-gap: 30px;
@@ -29,7 +42,7 @@
       grid-column: 1 / 1;
       text-decoration: none;
 
-      @media (max-width: 768px){
+      @media (max-width: 640px){
         margin-bottom: 40px;
       }
 
@@ -42,7 +55,7 @@
         color: $main-black;
         transition: transform 500ms;
 
-        @media (max-width: 768px){
+        @media (max-width: 640px){
           margin-bottom: 0;
         }
         &:hover {
@@ -54,7 +67,7 @@
     &--icons {
       display: flex;
 
-      @media (max-width: 768px){
+      @media (max-width: 640px){
         grid-column: 2 / -1;
         justify-content: flex-end;
         align-items: center;
@@ -63,11 +76,11 @@
       &--instagram {
         margin-left: 22px;
 
-        @media (max-width: 1280px){
+        @media (max-width: 1024px){
           margin-left: 32px;
         }
 
-        @media (max-width: 768px){
+        @media (max-width: 640px){
           margin-left: 20px;
         }
       }
@@ -90,12 +103,12 @@
     font-size: 14px;
     font-weight: 500;
 
-    @media (max-width: 1280px){
+    @media (max-width: 1024px){
       grid-column: 2 / 4;
       font-size: 13px;
     }
 
-    @media (max-width: 768px){
+    @media (max-width: 640px){
       grid-column: 1 / 1;
     }
 
@@ -109,7 +122,7 @@
       font-size: 15px;
       font-weight: 600;
 
-      @media (max-width: 1280px){
+      @media (max-width: 1024px){
         font-size: 14px;
         font-weight: 600;
       }
@@ -123,11 +136,11 @@
     font-size: 13px;
     font-weight: 500;
 
-    @media (max-width: 1280px){
+    @media (max-width: 1024px){
       grid-column: 4 / 6;
     }
 
-    @media (max-width: 768px){
+    @media (max-width: 640px){
       grid-column: 2 / 2;
     }
 
@@ -151,7 +164,7 @@
     margin-top: 87px;
     margin-bottom: 87px;
 
-    @media (max-width: 1280px){
+    @media (max-width: 1024px){
       grid-column: 2 / 6;
       width: 100%;
       height: 1px;
@@ -160,8 +173,9 @@
       margin-bottom: 64px;
     }
 
-    @media (max-width: 768px){
+    @media (max-width: 640px){
       grid-column: 1 / -1;
+      margin-top: 32px;
     }
   }
 
@@ -171,12 +185,12 @@
     font-size: 15px;
     font-weight: 500;
 
-    @media (max-width: 1280px){
+    @media (max-width: 1024px){
       grid-column: 2 / 5;
       font-size: 14px;
     }
 
-    @media (max-width: 768px){
+    @media (max-width: 640px){
       grid-column: 1 / -1;
       height: 80px;
       margin-bottom: 80px;
@@ -194,13 +208,13 @@
     grid-template-columns: repeat(4, 1fr);
     column-gap: 20px;
 
-    @media (max-width: 768px){
+    @media (max-width: 640px){
       grid-column: 1 / -1;
     }
   }
 
   &__item {
-    @media (max-width: 1280px){
+    @media (max-width: 1024px){
       margin-left: 0;
     }
 
@@ -209,7 +223,7 @@
       margin-right: 20px;
       grid-column: 1 / 2;
 
-      @media (max-width: 768px){
+      @media (max-width: 640px){
         grid-column: 1 / 2;
       }
 
@@ -223,7 +237,7 @@
       margin-right: 20px;
       grid-column: 4 / 5;
 
-      @media (max-width: 768px){
+      @media (max-width: 640px){
         grid-column: 3 / 5;
       }
 
@@ -248,7 +262,7 @@
     font-size: 12px;
     font-weight: 300;
 
-    @media (max-width: 768px){
+    @media (max-width: 640px){
       display: grid;
       column-gap: 20px;
       grid-template-columns: repeat(2, 1fr);
@@ -258,7 +272,7 @@
       grid-column: 1 / -1;
       margin-bottom: 10px;
 
-      @media (max-width: 768px){
+      @media (max-width: 640px){
         justify-self: center;
       }
     }
@@ -266,7 +280,7 @@
     &--right{
       grid-column: 1 / -1;
 
-      @media (max-width: 768px){
+      @media (max-width: 640px){
         justify-self: center;
       }
     }
