--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,6 +19,10 @@ body {
   margin: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 html:has(.menu:target) {
   overflow: hidden;
 }
@@ -28,12 +32,12 @@ html:has(.menu:target) {
   padding-right: 55px;
   font-size: 14px;
 
-  @media (max-width: 1280px){
+  @media (max-width: 1024px){
     padding-left: 39px;
     padding-right: 39px;
   }
 
-  @media (max-width: 768px){
+  @media (max-width: 640px){
     padding-left: 20px;
     padding-right: 20px;
   }
