--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -1,23 +1,81 @@
 .aside {
-      background-color: #1a5a4c;
-      max-height: 0;
-      overflow: auto;
-      z-index: 5;
-      transition: max-height .3s ease-in-out,opacity .3s ease-in-out;
+      // background-color: #1a5a4c;
+      // max-height: 0;
+      // overflow: auto;
+      // z-index: 5;
+      // transition: max-height .3s ease-in-out,opacity .3s ease-in-out;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #1a5a4c;
+  opacity: 0;
+  pointer-events: none;
+
+  overflow: auto;
+  z-index: 5;
+  transition: max-height .3s ease-in-out,opacity .3s ease-in-out;
+
+   &:target {
+    opacity: 1;
+    pointer-events: all;
+   }
+
+     @include on-tablet {
+        display: flex;
+      }
 
     &__content {
-      display: grid;
-      margin-inline: auto;
+      color: #fff;
       grid-template-columns: repeat(2,1fr);
       column-gap: 20px;
-      max-width: 280px;
+      padding: 27px 20px;
+      font-family: 'IBM Plex Sans',sans-serif;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 150%;
+      display: grid;
+      position: relative;
+
+    @include on-tablet {
+      grid-template-columns: repeat(6,1fr);
+      margin-inline: auto;
+      column-gap: 30px;
     }
+  }
 
     &__top {
       display: flex;
       gap: 28px;
-      margin-top: 27px;
       grid-column: 1/-1;
+
+      @include on-tablet {
+        margin-top: 40px;
+        height: 145px;
+        grid-column: 1/4;
+      }
+    }
+
+    &__menu {
+      grid-column: 1/-1;
+      grid-template-rows: min-content;
+      grid-template-columns: repeat(2,100px);
+      gap: 24px 28px;
+      margin-left: auto;
+      display: grid;
+
+      @include on-tablet {
+        grid-area: 1 / 1/-1 / 4;
+        margin-left: auto;
+        margin-right: auto;
+      }
+
+      @include on-desktop {
+        grid-column: 2/6;
+        row-gap: 30px;
+      }
+
     }
 
     &__close-icon {
@@ -26,27 +84,55 @@
       width: 24px;
       height: 24px;
     }
+    &__titles {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 100%;
+
+       @include on-tablet {
+          font-size: 16px;
+      }
+    }
 
     &__line {
       background-color: rgba(255, 255, 255, 0.5);
       height: 1px;
-      margin: 24px 20px;
       grid-column: 1/-1;
+      margin-bottom: 24px;
+
+       @include on-tablet {
+        display: none;
+      }
     }
 
     &__work {
       grid-column: 1/-1;
       margin: 0 20px;
+
+      @include on-tablet {
+        grid-column: 4/-2;
+        grid-row: 1;
+        margin: 40px 0;
+      }
+
+      // @include on-desktop {
+
+      // }
+
     }
 
     &__text {
       text-decoration: none;
       color: #fff;
+      font-weight: 400;
       font-family: 'IBM Plex Sans',sans-serif;
     }
 
     &__title {
       margin: 0 0 20px;
+
     }
 
     &__days {
@@ -57,11 +143,19 @@
 
     &__time {
       font-weight: 600;
+      font-size: 14px;
     }
 
     &__p {
       margin: 16px 0 27px 20px;
       grid-column: 1/-1;
+
+
+      @include on-tablet {
+        grid-column: 5/-1;
+        grid-row: 1;
+        margin: 80px 0 0 40px;
+      }
     }
 }
 
