--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,9 @@
 @import './blocks/footer';
 @import './blocks/gallery';
 @import './blocks/aside';
+@import './blocks/sliders';
+@import './blocks/vertical';
+
 
 
 
