--- a/src/styles/blocks/action.scss
+++ b/src/styles/blocks/action.scss
@@ -3,6 +3,16 @@
 
   @include content-padding-inline;
 
+
+    @include on-tablet {
+      grid-template-columns: repeat(6, 1fr);
+      column-gap: 30px;
+    }
+
+    @include on-desktop {
+          grid-template-columns: repeat(12, 70px);
+    }
+
   &__img {
     background-position: 50%;
     background-repeat: no-repeat;
@@ -10,6 +20,33 @@
     grid-column: 1/-1;
     width: 100%;
     height: 210px;
+
+    @include on-tablet {
+      display: grid;
+      height: 520px;
+      margin-bottom: 44px;
+    }
+
+    @include on-desktop {
+      display: grid;
+      grid-area: 1 / 1 / -1 / 8;
+      margin-bottom: 0;
+    }
+  }
+
+  &__content {
+    @include on-tablet {
+      grid-template-columns: repeat(6, 1fr);
+      column-gap: 30px;
+    }
+
+    @include on-desktop {
+      flex-direction: column;
+      grid-area: 1 / 9 / -1 / -1;
+      grid-template-columns: repeat(12, 70px);
+      justify-content: center;
+      display: flex;
+    }
   }
 
   &__details {
@@ -20,6 +57,16 @@
     column-gap: 20px;
     margin: 20px 0 10px;
     align-items: center;
+
+    @include on-tablet {
+    grid-column: 1 / 3;
+    margin-bottom: 32px;
+    }
+
+    @include on-desktop {
+      justify-content: left;
+      gap: 30px;
+    }
   }
 
   &__details-kind {
@@ -30,6 +77,10 @@
     font-size: 16px;
     font-style: normal;
     width: 129px;
+
+    @include on-tablet {
+      font-size: 14px;
+    }
   }
 
   &__details-when {
@@ -38,6 +89,10 @@
     font-weight: 700;
     font-size: 16px;
     line-height: 150%;
+
+     @include on-tablet {
+      font-size: 14px;
+    }
   }
 
   &__title-text {
@@ -46,12 +101,21 @@
     font-size: 28px;
     text-align: left;
     color: rgb(15, 14, 8);
+
+    @include on-tablet {
+      font-size: 36px;
+    }
   }
 
   &__title {
     display: flex;
     align-items: center;
     gap: 15px;
+
+    @include on-tablet {
+      grid-column: 1 / 5;
+      margin-bottom: 15px;
+    }
   }
 
   &__title-red-squere {
@@ -60,6 +124,11 @@
     height: 10px;
     margin-top: 12px;
     margin-bottom: 11px;
+
+    @include on-tablet {
+      width: 15px;
+      height: 15px;
+    }
   }
 
   &__description {
@@ -69,13 +138,34 @@
     font-size: 16px;
     line-height: 150%;
     margin: 10px 0 60px;
+
+    @include on-tablet {
+      grid-column: 1 / 5;
+    }
   }
 
   &__img--one {
     background-image: url(./../images/action__img--one.svg);
+
+    @include on-tablet {
+      margin-bottom: 64px;
+    }
+
+    @include on-desktop {
+      margin-bottom: 104px;
+    }
   }
 
   &__img--two {
     background-image: url(./../images/action__img--two.svg);
+
+    @include on-tablet {
+      margin-bottom: 104px;
+    }
+
+    @include on-desktop {
+      margin-bottom: 104px;
+
+    }
   }
 }
