--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -3,19 +3,66 @@
     margin-inline: auto;
     grid-template-columns: repeat(2,1fr);
     column-gap: 20px;
-    max-width: 280px;
+    max-width: 100%;
+    font-family: 'IBM Plex Sans',sans-serif;
+    font-size: 12px;
+    font-weight: 300;
+
+    @include on-tablet {
+      grid-template-columns: repeat(6, 1fr);
+      margin-inline: auto;
+      column-gap: 30px;
+
+      flex-direction: row;
+      margin-top: 120px;
+      margin-bottom: 35px;
+    }
+
+    @include on-desktop {
+      grid-template-columns: repeat(12, 1fr);
+      margin-inline: auto;
+      column-gap: 30px;
+    }
+
+    @include content-padding-inline;
 
   &__designer {
     margin: 80px 0 10px;
     grid-column: 1/-1;
     text-align: center;
+
+    @include on-tablet {
+      margin: 120px 0 36px;
+      grid-column: 5 / -1;
+      grid-row: 7;
+      text-align: right;
+    }
+
+    @include on-desktop {
+      margin-top: 87px;
+      grid-column: 9 / -1;
+      text-align: right;
+    }
   }
+
   &__copyright {
     text-align: center;
     font-size: 12px;
     font-weight: 300;
     line-height: 140.63%;
     grid-column: 1/-1;
+
+    @include on-tablet {
+      margin: 120px 0 36px;
+      grid-column: 1 / 3;
+      grid-row: 7;
+      text-align: left;
+    }
+
+    @include on-desktop {
+      margin-top: 87px;
+      grid-column: 1 / 4;
+    }
   }
 }
 
