--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,45 +1,154 @@
 .gallery {
-  display: grid;
-  margin-inline: auto;
-  grid-template-columns: repeat(2,1fr);
-  column-gap: 20px;
-  max-width: 280px;
+  margin-left: auto;
+  margin-right: auto;
+
+  @include content-padding-inline;
+
+  // grid-template-columns: repeat(2,1fr);
+  // column-gap: 30px;
+
+  @include on-desktop {
+    grid-template-columns: repeat(12, 70px);
+    margin-inline: auto;
+    column-gap: 30px;
+  }
+
+  &__title-wraper {
+    // grid-template-columns: repeat(2, 1fr);
+    column-gap: 20px;
+    margin-bottom: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    // padding-left: 20px;
+    // padding-right: 20px;
+    display: grid;
+
+       // @include on-desktop {
+    //   padding-left: 55px;
+    //   padding-right: 55px;
+    //   margin-bottom: 56px;
+    // }
+  }
+
+  &__tittle {
+    color: #0f0e08;
+    text-align: center;
+    grid-column: 1 / -1;
+    font-family: Montserrat, sans-serif;
+    font-size: 46px;
+    height: 48px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 100%;
+  }
+
+  &__photos {
+    display: none;
+
+    @include on-desktop {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 30px 20px;
+      margin-left: auto;
+      margin-right: auto;
+      padding-left: 20px;
+      padding-right: 20px;
+      display: grid;
+      padding-top: 56px;
+
+       @include content-padding-inline;
+    }
+  }
+
+  &__photo {
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 
   &__picture-wrapper1 {
     overflow: hidden;
-    height: 410px;
-    grid-column: 1/-1;
+    height: 600px;
+    width: 370px;
+    // grid-column: 1 / -1;
+    grid-column: span 4;
+    background-image: url(../images/gallery1.svg);
+
+    // @include on-desktop {
+    // grid-column: 1 / 4;
+    // height: 600px;
+    // margin-bottom: 30px;
+    // }
   }
 
-  &__picture-wrapper2 {
-    overflow: hidden;
-    display: none;
-  }
+  // &__picture-wrapper2 {
+  //   overflow: hidden;
+  //   display: none;
+
+  //   @include on-desktop {
+  //   display: none;
+
+  //   }
+  // }
 
   &__picture-wrapper3 {
-    overflow: hidden;
-    display: none;
+    // overflow: hidden;
+    // display: none;
+    grid-column: 5 / 12;
+    height: 600px;
+    width: 770px;
+    background-image: url(../images/gallery3.svg);
+
+    // @include on-desktop {
+    // display: block;
+    // grid-column: span 8;
+    // height: 600px;
+    // }
   }
 
   &__picture-wrapper4 {
-    overflow: hidden;
-    display: none;
+    // display: none;
+    // overflow: hidden;
+
+    height: 360px;
+    width: 770px;
+    grid-column: 1 / 8;
+    background-image: url(../images/gallery4.svg);
+
+  //  @include on-desktop {
+  //     height: 360px;
+  //    display: block;
+  //   grid-column: 1 / 8;
+  //   }
   }
 
   &__picture-wrapper5 {
-    overflow: hidden;
-    display: none;
+    // overflow: hidden;
+    // display: none;
+
+    grid-column: 8 / 12;
+    height: 360px;
+    width: 370px;
+    background-image: url(../images/gallery5.svg);
+
+    // @include on-desktop {
+    //   display: block;
+    //   grid-column: span 4;
+    //   height: 100%;
+    //   width: 100%;
+    // }
   }
 
-  &__dot-group {
-    background-image: url(../images/dot--group.svg);
-    width: 102px;
-    height: 9px;
-    margin-top: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    grid-column: 1/-1;
-  }
+
+
+  // &__dot-group {
+  //   background-image: url(../images/dot--group.svg);
+  //   width: 102px;
+  //   height: 9px;
+  //   margin-top: 20px;
+  //   margin-left: auto;
+  //   margin-right: auto;
+  //   grid-column: 1/-1;
+  // }
 }
 
 
