--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,12 +1,34 @@
 .header {
-  margin-bottom: 70px;
+  // margin-bottom: 70px;
   column-gap: 20px;
   text-align: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50%;
   grid-template-columns: repeat(2,1fr);
-  
+
+  @include on-tablet {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    margin-inline: auto;
+    column-gap: 30px;
+  }
+
+  @include on-desktop {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    margin-inline: auto;
+    column-gap: 30px;
+  }
+
+  // @include on-tablet {
+
+  // }
+
+  // @include on-desktop {
+
+  // }
+
   &__img {
     background-image: url(../images/header-image.svg);
     width: 100%;
@@ -20,6 +42,24 @@
     margin-right: auto;
     display: flex;
     position: relative;
+
+    @include on-tablet {
+      grid-column: 4 / -1;
+
+      justify-content: left;
+      width: 374px;
+      height: 384px;
+      margin-left: 15px;
+      margin-right: 0;
+    }
+
+    @include on-desktop {
+      grid-column: 6 / -1;
+      width: 725px;
+      height: 655px;
+      margin-left: 15px;
+      margin-right: 0;
+    }
   }
 
   &__burger-menu {
@@ -46,6 +86,23 @@
     grid-column: 1 / -1;
 
     @include content-padding-inline;
+
+    @include on-tablet {
+      grid-row: 1;
+      margin: 127px 0 0;
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+      grid-column: 1 / 3;
+    }
+
+    @include on-desktop {
+      margin: 206px 0 0;
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+      grid-column: 1 / 6;
+    }
   }
 
   &__main-title {
@@ -56,6 +113,21 @@
     font-weight: 700;
     margin: 20px 0;
     position: relative;
+
+    @include on-tablet {
+    text-align: left;
+    font-size: 54px;
+    font-weight: 700;
+    line-height: 120%;
+    margin: 0 0 38px;
+    }
+
+
+    @include on-desktop {
+    text-align: left;
+    font-size: 72px;
+    margin: 0;
+    }
   }
 
   &__tickets-link {
@@ -68,7 +140,7 @@
     font-family: 'IBM Plex Sans',sans-serif;
     font-size: 16px;
     font-weight: 500;
-    padding-left: 80px;
+    padding-left: 100px;
     position: relative;
 
     &::after {
@@ -84,8 +156,25 @@
       position: absolute;
       right: 0;
       top:  0;
+
+      @include on-tablet {
+        height: 70px;
+        width: 70px;
       }
-   }
+    }
+
+    @include on-tablet {
+      height: 70px;
+      width: 200px;
+      margin-bottom: 19px;
+    }
+
+    @include on-desktop {
+      margin-left: auto;
+      margin-bottom: 118px;
+    }
+
+  }
 }
 
 
