--- a/src/styles/blocks/lection.scss
+++ b/src/styles/blocks/lection.scss
@@ -9,6 +9,14 @@
     background-size: cover;
     width: 100%;
     height: 210px;
+
+      @include on-tablet {
+        height: 390px;
+      }
+
+      @include on-desktop {
+        height: 550px;
+      }
   }
 
   &__content {
@@ -25,6 +33,18 @@
     display: flex;
     transform: translateY(-57px);
     box-shadow: 0 2px rgba(26,90,76,.25);
+
+    @include on-tablet {
+      width: 570px;
+      height: 204px;
+      padding: 45px 55px 50px;
+      transform: translateY(-84px);
+    }
+
+    @include on-desktop {
+      padding: 45px 100px 50px;
+      transform: translateY(-102px);
+    }
   }
 
   &__details {
@@ -37,6 +57,10 @@
     padding-right: 21px;
     font-family: 'IBM Plex Sans',sans-serif;
     display: flex;
+
+    @include on-tablet {
+      margin-bottom: 16px;
+    }
   }
 
   &__kind {
@@ -45,6 +69,10 @@
     font-style: normal;
     font-weight: 500;
     line-height: 100%;
+
+    @include on-tablet {
+      font-size: 14px;
+    }
   }
 
   &__when {
@@ -53,6 +81,10 @@
     font-style: normal;
     font-weight: 700;
     line-height: 150%;
+
+    @include on-tablet {
+      font-size: 14px;
+    }
   }
 
   &__tittle {
@@ -64,5 +96,10 @@
     font-style: normal;
     font-weight: 400;
     line-height: 100%;
+
+    @include on-tablet {
+      font-size: 36px;
+      text-align: left;
+    }
   }
 }
