--- a/src/styles/blocks/poster.scss
+++ b/src/styles/blocks/poster.scss
@@ -1,4 +1,5 @@
 .poster {
+  display: grid;
 
   &__title-wraper {
     @include content-padding-inline;
@@ -13,5 +14,17 @@
     color: rgb(15, 14, 8);
     margin: 70px 0 40px;
     line-height: 100%;
+
+    @include on-tablet {
+      font-size: 48px;
+      text-align: left;
+      margin: 88px 0 48px;
+      font-weight: 700;
+    }
+
+    @include on-desktop {
+      font-size: 48px;
+      margin: 200px 0 56px;
+    }
   }
 }
