--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -1,5 +1,15 @@
 .subscription {
-  margin: 129px 0 50px;
+  margin: 100px 0 50px;
+
+   @include on-tablet {
+  margin: 133px 0 51px;
+
+  }
+
+  @include on-desktop {
+  margin: 200px 0 48px;
+
+  }
 
   &__big-content {
     background-image: url(../images/subscribe.svg);
@@ -9,6 +19,14 @@
     width: 100%;
     height: 386px;
     display: grid;
+
+    @include on-tablet {
+      height: 380px;
+    }
+
+    @include on-desktop {
+      height: 550px;
+    }
   }
 
   &__content-wrapper {
@@ -27,6 +45,14 @@
     padding-top: 88px;
     padding-bottom: 88px;
     display: flex;
+
+    @include on-tablet {
+      padding-top: 82px;
+    }
+
+    @include on-desktop {
+      padding-top: 163px;
+    }
   }
 
   &__title {
@@ -37,6 +63,10 @@
     font-size: 36px;
     font-weight: 700;
     line-height: 100%;
+
+    @include on-tablet {
+      font-size: 48px;
+    }
   }
 
   &__description {
@@ -47,12 +77,32 @@
     font-size: 18px;
     font-weight: 400;
     line-height: 150%;
+
+    @include on-tablet {
+      margin-bottom: 64px;
+      }
+
+    @include on-desktop {
+      margin-bottom: 72px;
+    }
   }
 
   &__form {
     width: 100%;
     display: flex;
     position: relative;
+
+    @include on-tablet {
+      margin: 0 0 82px;
+      gap: 16px;
+      grid-column: 2 / -2;
+      }
+
+    @include on-desktop {
+      gap: 30px;
+      margin-bottom: 163px;
+      grid-column: 4 / 10;
+    }
   }
 
   &__input {
@@ -64,9 +114,18 @@
     padding-left: 24px;
     padding-right: 24px;
     font-family: Montserrat,sans-serif;
+
+    @include on-tablet {
+      height: 70px;
+      padding-left: 32px;
+      max-width: 100%;
+      }
+
+    @include on-desktop {
+      max-width: 100%;
+      height: 70px;
+    }
   }
-
-
 
   &__btn  {
     width: 50px;
@@ -77,7 +136,17 @@
     background-color: #f14a27;
     border: none;
     cursor: pointer;
-   }
+
+    @include on-tablet {
+      min-width: 70px;
+      min-height: 70px;
+    }
+
+    @include on-desktop {
+      min-width: 70px;
+      min-height: 70px;
+    }
+  }
 }
 
 
