--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -78,7 +78,6 @@
 
     @include on-tablet {
       margin: 50px 0 20px;
-      // line-height: 140.63%;
     }
 
     @include on-desktop {
@@ -150,7 +149,7 @@
 
      &:hover {
       color: #f14a27;
-      // transition: all 0.5s;
+      transition: all 0.5s;
     }
   }
 
