--- a/src/styles/blocks/vertical.scss
+++ b/src/styles/blocks/vertical.scss
@@ -23,7 +23,7 @@
   &__text {
     @include on-desktop {
       color: #687480;
-      font-family: IBM Plex Sans, sans-serif;
+      font-family: 'IBM Plex Sans', sans-serif;
       font-size: 14px;
       font-style: normal;
       font-weight: 700;
