--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -19,8 +19,8 @@
     margin-bottom: 40px;
     margin-left: auto;
     margin-right: auto;
-    // padding-left: 20px;
-    // padding-right: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     display: grid;
 
        // @include on-desktop {
@@ -69,7 +69,7 @@
     overflow: hidden;
     height: 600px;
     width: 370px;
-    // grid-column: 1 / -1;
+    grid-column: 1 / -1;
     grid-column: span 4;
     background-image: url(../images/gallery1.svg);
 
