--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,11 @@
-@import 'utils';
-@import 'fonts';
-@import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import './utils/vars';
+@import './utils/mixins';
+@import './blocks/page';
+@import './blocks/container';
+@import './blocks/icon';
+@import './blocks/btn';
+@import './blocks/header';
+@import './blocks/top-bar';
+@import './blocks/menu';
+@import './blocks/nav';
+@import './blocks/schedule';
