--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,34 +1,19 @@
 .gallery {
-  margin-left: auto;
-  margin-right: auto;
+  display: grid;
 
-  @include content-padding-inline;
-
-  // grid-template-columns: repeat(2,1fr);
-  // column-gap: 30px;
-
-  @include on-desktop {
-    grid-template-columns: repeat(12, 70px);
+  @include on-tablet {
+    grid-template-columns: repeat(6, 1fr);
     margin-inline: auto;
     column-gap: 30px;
   }
 
-  &__title-wraper {
-    // grid-template-columns: repeat(2, 1fr);
-    column-gap: 20px;
-    margin-bottom: 40px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
-    display: grid;
-
-       // @include on-desktop {
-    //   padding-left: 55px;
-    //   padding-right: 55px;
-    //   margin-bottom: 56px;
-    // }
+  @include on-desktop {
+    grid-template-columns: repeat(12, 1fr);
+    margin-inline: auto;
+    column-gap: 30px;
   }
+
+  @include content-padding-inline;
 
   &__tittle {
     color: #0f0e08;
@@ -40,125 +25,144 @@
     font-style: normal;
     font-weight: 700;
     line-height: 100%;
-  }
 
-  &__photos {
-    display: none;
+     @include on-tablet {
+      margin-bottom: 48px;
+    }
 
     @include on-desktop {
-      grid-template-columns: repeat(2, 1fr);
-      gap: 30px 20px;
-      margin-left: auto;
-      margin-right: auto;
-      padding-left: 20px;
-      padding-right: 20px;
-      display: grid;
-      padding-top: 56px;
-
-       @include content-padding-inline;
+      text-align: left;
+      font-size: 48px;
     }
   }
 
-  &__photo {
-    background-position: 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
+    &__picture-wrapper-1 {
 
-  &__picture-wrapper1 {
     overflow: hidden;
-    height: 600px;
-    width: 370px;
+    height: 410px;
+    width: 280px;
     grid-column: 1 / -1;
-    grid-column: span 4;
-    background-image: url(../images/gallery1.svg);
 
-    // @include on-desktop {
-    // grid-column: 1 / 4;
-    // height: 600px;
-    // margin-bottom: 30px;
-    // }
+    @include on-tablet {
+      height: 543px;
+      width: 340px;
+      grid-column: 1 / 3;
+    }
+
+    @include on-desktop {
+      grid-column: 1 / 4;
+      height: 600px;
+      width: 370px;
+      margin-bottom: 30px;
+    }
   }
 
-  // &__picture-wrapper2 {
-  //   overflow: hidden;
-  //   display: none;
-
-  //   @include on-desktop {
-  //   display: none;
-
-  //   }
-  // }
-
-  &__picture-wrapper3 {
-    // overflow: hidden;
-    // display: none;
-    grid-column: 5 / 12;
-    height: 600px;
-    width: 770px;
-    background-image: url(../images/gallery3.svg);
-
-    // @include on-desktop {
-    // display: block;
-    // grid-column: span 8;
-    // height: 600px;
-    // }
+  &__photo-1 {
+   height: 100%;
   }
 
-  &__picture-wrapper4 {
-    // display: none;
-    // overflow: hidden;
+   &__picture-wrapper-2 {
+    overflow: hidden;
+    display: none;
 
-    height: 360px;
-    width: 770px;
-    grid-column: 1 / 8;
-    background-image: url(../images/gallery4.svg);
+    @include on-tablet {
+      height: 543px;
+      width: 340px;
+      display: grid;
+      grid-column: span 3 ;
+    }
 
-  //  @include on-desktop {
-  //     height: 360px;
-  //    display: block;
-  //   grid-column: 1 / 8;
-  //   }
+    @include on-desktop {
+      display: none;
+    }
   }
 
-  &__picture-wrapper5 {
-    // overflow: hidden;
-    // display: none;
-
-    grid-column: 8 / 12;
-    height: 360px;
-    width: 370px;
-    background-image: url(../images/gallery5.svg);
-
-    // @include on-desktop {
-    //   display: block;
-    //   grid-column: span 4;
-    //   height: 100%;
-    //   width: 100%;
-    // }
+  &__photo-2 {
+    width: 100%;
+    height: 100%;
   }
 
+  &__picture-wrapper-3 {
+    overflow: hidden;
+    display: none;
 
+    @include on-tablet {
+      display: none;
+    }
 
-  // &__dot-group {
-  //   background-image: url(../images/dot--group.svg);
-  //   width: 102px;
-  //   height: 9px;
-  //   margin-top: 20px;
-  //   margin-left: auto;
-  //   margin-right: auto;
-  //   grid-column: 1/-1;
-  // }
+    @include on-desktop {
+      height: 600px;
+      width: 770px;
+      display: block;
+      margin-bottom: 30px;
+      grid-column: span 8;
+    }
+  }
+
+  &__photo-3 {
+    width: 100%;
+    height: 100%;
+  }
+
+  &__picture-wrapper-4 {
+    overflow: hidden;
+    display: none;
+
+    @include on-tablet {
+      display: none;
+    }
+
+    @include on-desktop {
+      display: block;
+      height: 360px;
+      width: 770px;
+      grid-column: 1 / 8;
+    }
+  }
+
+  &__photo-4 {
+    width: 100%;
+    height: 100%;
+  }
+
+  &__picture-wrapper-5 {
+    overflow: hidden;
+    display: none;
+
+     @include on-tablet {
+      display: none;
+    }
+
+    @include on-desktop {
+      display: block;
+      height: 360px;
+      width: 370px;
+      grid-column: 8 / 12;
+    }
+  }
+
+  &__photo-5 {
+    width: 100%;
+    height: 100%;
+  }
+
+  &__dot-group {
+    background-image: url(../images/dot--group.svg);
+    width: 102px;
+    height: 9px;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+
+    grid-column: 1 / -1;
+
+    @include on-tablet {
+      margin-top: 32px;
+    }
+
+    @include on-desktop {
+      display: none;
+    }
+  }
 }
-
-
-
-
-
-
-
-
-
-
-
 
