--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -25,6 +25,7 @@
     font-style: normal;
     font-weight: 700;
     line-height: 100%;
+    margin-bottom: 40px ;
 
      @include on-tablet {
       margin-bottom: 48px;
@@ -37,7 +38,6 @@
   }
 
     &__picture-wrapper-1 {
-
     overflow: hidden;
     height: 410px;
     width: 280px;
