--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -29,6 +29,7 @@
 
      @include on-tablet {
       margin-bottom: 48px;
+      text-align: left;
     }
 
     @include on-desktop {
@@ -37,7 +38,7 @@
     }
   }
 
-    &__picture-wrapper-1 {
+  &__picture-wrapper-1 {
     overflow: hidden;
     height: 410px;
     width: 280px;
@@ -55,6 +56,8 @@
       width: 370px;
       margin-bottom: 30px;
     }
+
+    @include hover (transform, scale(1.05));
   }
 
   &__photo-1 {
@@ -75,6 +78,8 @@
     @include on-desktop {
       display: none;
     }
+
+    @include hover (transform, scale(1.05));
   }
 
   &__photo-2 {
@@ -97,6 +102,8 @@
       margin-bottom: 30px;
       grid-column: span 8;
     }
+
+    @include hover (transform, scale(1.05));
   }
 
   &__photo-3 {
@@ -115,14 +122,14 @@
     @include on-desktop {
       display: block;
       height: 360px;
-      width: 770px;
       grid-column: 1 / 8;
     }
+
+    @include hover (transform, scale(1.05));
   }
 
   &__photo-4 {
     width: 100%;
-    height: 100%;
   }
 
   &__picture-wrapper-5 {
@@ -139,6 +146,9 @@
       width: 370px;
       grid-column: 8 / 12;
     }
+
+    @include hover (transform, scale(1.05));
+
   }
 
   &__photo-5 {
@@ -153,7 +163,6 @@
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
-
     grid-column: 1 / -1;
 
     @include on-tablet {
