--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,5 +1,4 @@
 .header {
-  // margin-bottom: 70px;
   column-gap: 20px;
   text-align: center;
   background-size: cover;
@@ -21,14 +20,6 @@
     column-gap: 30px;
   }
 
-  // @include on-tablet {
-
-  // }
-
-  // @include on-desktop {
-
-  // }
-
   &__img {
     background-image: url(../images/header-image.svg);
     width: 100%;
@@ -45,7 +36,6 @@
 
     @include on-tablet {
       grid-column: 4 / -1;
-
       justify-content: left;
       width: 374px;
       height: 384px;
@@ -133,7 +123,7 @@
   &__tickets-link {
     display: flex;
     height: 50px;
-    border: 1px solid #1a5a4c;
+    border: 1px solid $green-page-color;
     align-items: center;
     text-decoration: none;
     color: #0f0e08;
@@ -147,7 +137,7 @@
       content: "";
       width: 50px;
       height: 50px;
-      background-color: #1a5a4c;
+      background-color: $green-page-color;
       background-image: url(../images/icons/icon--arrow.svg);
       background-repeat: no-repeat;
       z-index: 5;
@@ -173,7 +163,6 @@
       margin-left: auto;
       margin-bottom: 118px;
     }
-
   }
 }
 
