--- a/src/styles/blocks/lection.scss
+++ b/src/styles/blocks/lection.scss
@@ -21,7 +21,7 @@
 
   &__content {
     box-sizing: border-box;
-    background-color: #fff;
+    background-color: $white-text-color;
     flex-direction: column;
     align-items: center;
     width: 280px;
@@ -32,7 +32,7 @@
     padding-bottom: 20px;
     display: flex;
     transform: translateY(-57px);
-    box-shadow: 0 2px rgba(26,90,76,.25);
+    box-shadow: 0 2px $green-page-color;
 
     @include on-tablet {
       width: 570px;
@@ -64,7 +64,7 @@
   }
 
   &__kind {
-    color: #687480;
+    color: $grey-text-color;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
@@ -76,7 +76,7 @@
   }
 
   &__when {
-    color: #1a5a4c;
+    color: $green-page-color;
     font-size: 16px;
     font-style: normal;
     font-weight: 700;
@@ -88,7 +88,7 @@
   }
 
   &__tittle {
-    color: #0f0e08;
+    color: $black-text-color;
     text-align: center;
     width: 100%;
     font-family: Montserrat,sans-serif;
