--- a/src/styles/blocks/poster.scss
+++ b/src/styles/blocks/poster.scss
@@ -11,7 +11,7 @@
     font-weight: 700;
     font-size: 36px;
     text-align: center;
-    color: rgb(15, 14, 8);
+    color: $black-text-color;
     margin: 70px 0 40px;
     line-height: 100%;
 
