--- a/src/styles/blocks/action.scss
+++ b/src/styles/blocks/action.scss
@@ -3,15 +3,14 @@
 
   @include content-padding-inline;
 
+  @include on-tablet {
+    grid-template-columns: repeat(6, 1fr);
+    column-gap: 30px;
+  }
 
-    @include on-tablet {
-      grid-template-columns: repeat(6, 1fr);
-      column-gap: 30px;
-    }
-
-    @include on-desktop {
-          grid-template-columns: repeat(12, 70px);
-    }
+  @include on-desktop {
+    grid-template-columns: repeat(12, 70px);
+  }
 
   &__img {
     background-position: 50%;
@@ -32,9 +31,14 @@
       grid-area: 1 / 1 / -1 / 8;
       margin-bottom: 0;
     }
+
+    @include hover (transform, scale(1.05));
+
   }
 
   &__content {
+    grid-column: 1 / -1;
+
     @include on-tablet {
       grid-template-columns: repeat(6, 1fr);
       column-gap: 30px;
@@ -53,14 +57,14 @@
     display: flex;
     justify-content: space-between;
     grid-column: 1 / -1;
-    grid-template-columns: repeat(2,1fr);
     column-gap: 20px;
     margin: 20px 0 10px;
     align-items: center;
 
     @include on-tablet {
-    grid-column: 1 / 3;
-    margin-bottom: 32px;
+      grid-column: 1 / 3;
+      margin-bottom: 32px;
+      justify-content: left;
     }
 
     @include on-desktop {
@@ -71,12 +75,11 @@
 
   &__details-kind {
     margin: 0;
-    color: rgb(104, 116, 128);
+    color: $placeholder-color;
     font-family: 'IBM Plex Sans',sans-serif;
     font-weight: 500;
     font-size: 16px;
     font-style: normal;
-    width: 129px;
 
     @include on-tablet {
       font-size: 14px;
@@ -84,7 +87,7 @@
   }
 
   &__details-when {
-    color: rgb(26, 90, 76);
+    color: $green-page-color;
     font-family: 'IBM Plex Sans',sans-serif;
     font-weight: 700;
     font-size: 16px;
@@ -100,7 +103,7 @@
     font-weight: 400;
     font-size: 28px;
     text-align: left;
-    color: rgb(15, 14, 8);
+    color: $black-text-color;
 
     @include on-tablet {
       font-size: 36px;
@@ -119,7 +122,7 @@
   }
 
   &__title-red-squere {
-    background-color:red;
+    background-color: $red-page-color;
     width: 10px;
     height: 10px;
     margin-top: 12px;
@@ -132,7 +135,7 @@
   }
 
   &__description {
-    color: rgb(78, 78, 78);
+    color: $description-text-color;
     font-family: 'IBM Plex Sans',sans-serif;
     font-weight: 300;
     font-size: 16px;
@@ -148,7 +151,7 @@
     background-image: url(./../images/action__img--one.svg);
 
     @include on-tablet {
-      margin-bottom: 64px;
+      margin-bottom: 40px;
     }
 
     @include on-desktop {
@@ -160,12 +163,11 @@
     background-image: url(./../images/action__img--two.svg);
 
     @include on-tablet {
-      margin-bottom: 104px;
+      margin-bottom: 40px;
     }
 
     @include on-desktop {
       margin-bottom: 104px;
-
     }
   }
 }
