--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -6,7 +6,7 @@
   max-width: 100%;
   position: relative;
 
-   @include on-tablet {
+  @include on-tablet {
     grid-template-columns: repeat(6, 1fr);
     margin-inline: auto;
     column-gap: 30px;
@@ -69,7 +69,7 @@
 
   &__title {
     margin: 40px 0 20px;
-    color: #0f0e08;
+    color: $black-text-color;
     font-family: 'IBM Plex Sans',sans-serif;
     font-size: 14px;
     font-style: normal;
@@ -92,7 +92,7 @@
 
   &__day {
     all: initial;
-    color: #0f0e08;
+    color: $black-text-color;
     font-family: 'IBM Plex Sans',sans-serif;
     font-size: 14px;
     font-weight: 400;
@@ -113,18 +113,18 @@
       height: 260px;
       padding-right: 65px;
       margin-top: 50px;
-      border-right: 1px solid rgba(26, 90, 76, .5);
+      border-right: 1px solid $green-page-color;
       grid-column: 5 / 8;
     }
   }
 
   &__time {
-  font-weight: 600;
+    font-weight: 600;
   }
 
   &__day--p {
-  margin: 30px 0 0;
-  list-style-type: none;
+    margin: 30px 0 0;
+    list-style-type: none;
   }
 
   &__adresses {
@@ -148,14 +148,14 @@
     cursor: pointer;
 
      &:hover {
-      color: #f14a27;
+      color: $red-page-color;
       transition: all 0.5s;
     }
   }
 
   &__line {
     height: 1px;
-    background-color: rgba(26,90,76,.5);
+    background-color: $green-page-color;
     margin: 70px 0 40px;
     grid-column: 1/-1;
 
