--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -1,14 +1,12 @@
 .subscription {
-  margin: 100px 0 50px;
+  margin: 92px 0 50px;
 
-   @include on-tablet {
-  margin: 133px 0 51px;
-
+  @include on-tablet {
+    margin: 133px 0 51px;
   }
 
   @include on-desktop {
-  margin: 200px 0 48px;
-
+    margin: 200px 0 48px;
   }
 
   &__big-content {
@@ -57,7 +55,7 @@
 
   &__title {
     text-align: center;
-    color: #fff;
+    color: $white-text-color;
     margin-bottom: 20px;
     font-family: Montserrat,sans-serif;
     font-size: 36px;
@@ -66,21 +64,24 @@
 
     @include on-tablet {
       font-size: 48px;
+       margin-bottom: 16px;
     }
   }
 
   &__description {
-    color: #fff;
+    color: $white-text-color;
     text-align: center;
     margin-bottom: 50px;
     font-family: 'IBM Plex Sans',sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 150%;
+    margin-bottom: 50px;
 
     @include on-tablet {
+      line-height: 100%;
       margin-bottom: 64px;
-      }
+    }
 
     @include on-desktop {
       margin-bottom: 72px;
@@ -88,20 +89,22 @@
   }
 
   &__form {
-    width: 100%;
     display: flex;
     position: relative;
+    width: 100%;
 
     @include on-tablet {
       margin: 0 0 82px;
       gap: 16px;
       grid-column: 2 / -2;
-      }
+      width: 460px;
+    }
 
     @include on-desktop {
       gap: 30px;
       margin-bottom: 163px;
       grid-column: 4 / 10;
+      width: 570px;
     }
   }
 
@@ -119,7 +122,7 @@
       height: 70px;
       padding-left: 32px;
       max-width: 100%;
-      }
+    }
 
     @include on-desktop {
       max-width: 100%;
@@ -133,7 +136,7 @@
     background-image: url(../images/icons/icon--arrow2.svg);
     background-repeat: no-repeat;
     background-position: 50%;
-    background-color: #f14a27;
+    background-color: $red-page-color;
     border: none;
     cursor: pointer;
 
