--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,14 @@
 $c-gray: #eee;
+$black-text-color: #0f0e08;
+$description-text-color: #4e4e4e;
+$white-text-color: #fff;
+$green-page-color: #1a5a4c;
+$grey-text-color: #687480;
+$red-page-color: #f14a27;
+$slider-buttons-color: #e0e0e0;
+$placeholder-color: #687480;
+$dim-page-color: #18181a;
+$line-text-color: rgba(255, 255, 255, 0.5);
+
+
+
