Museum, errors corrected

--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -76,6 +76,9 @@
     background-repeat: no-repeat;
     width: 24px;
     height: 24px;
+     position: absolute;
+    top: 27px;
+    left: 20px;
   }
 
   &__titles {
