--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -146,6 +146,9 @@
     text-decoration: none;
     color: inherit;
     cursor: pointer;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 150%;
 
      &:hover {
       color: $red-page-color;
