implement all main sections

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,3 +9,11 @@
 @import './blocks/menu';
 @import './blocks/nav';
 @import './blocks/schedule';
+@import './blocks/current';
+@import './blocks/page-title';
+@import './blocks/card';
+@import './blocks/announcement';
+@import './blocks/gallery';
+@import './blocks/slider';
+@import './blocks/sub';
+@import './blocks/form';
