finished landaing page

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -10,6 +10,10 @@
 .page {
   scroll-behavior: smooth;
 
+  &:has(.page__menu:target) {
+    overflow: hidden;
+  }
+
   &__body {
     min-width: 320px;
   }
@@ -27,6 +31,7 @@
       opacity: 1;
       transform: translateY(0);
       pointer-events: all;
+      z-index: 1;
     }
   }
 }
