--- a/src/styles/blocks/sub.scss
+++ b/src/styles/blocks/sub.scss
@@ -1,6 +1,8 @@
 .sub {
   padding-block: 88px;
   background-image: url(../images/sub/sub-bg-m.png);
+  background-repeat: no-repeat;
+  background-size: cover;
 
   @media (min-width: $tablet-min-width) {
     padding-block: 82px;
