--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,3 +17,6 @@
 @import './blocks/slider';
 @import './blocks/sub';
 @import './blocks/form';
+@import './blocks/footer';
+@import './blocks/socials';
+@import './blocks/contacts';
