--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -16,4 +16,12 @@
   &--close {
     background-image: url(../images/icons/close.svg);
   }
+
+  &--facebook {
+    background-image: url(../images/icons/facebook.svg);
+  }
+
+  &--instagram {
+    background-image: url(../images/icons/instagram.svg);
+  }
 }
