--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -29,6 +29,10 @@
     @include on-tablet {
     grid-column: 1 /1;
    }
+
+   &:hover {
+      transform: translateY(-10px)
+    }
   }
 
   &__social {
@@ -43,16 +47,25 @@
     }
 
     @include content-padding-inline;
+
   }
 
   &__fb {
     width: 24px;
     height: 24px;
+
+    &:hover {
+      transform: translateY(-10px)
+    }
   }
 
   &__instagram {
     width: 24px;
     height: 24px;
+
+    &:hover {
+      transform: translateY(-10px)
+    }
   }
 
   &__work {
@@ -90,17 +103,10 @@
     flex-wrap: wrap;
   }
 
-  &__day {
-    all: initial;
-    color: $black-text-color;
-    font-family: 'IBM Plex Sans',sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 150%;
-
-    @include on-desktop {
-      font-weight: 600;
-    }
+  &__workingDay {
+    flex-wrap: wrap;
+    gap: 5px;
+    display: flex;
   }
 
   &__contacts {
@@ -120,11 +126,18 @@
 
   &__time {
     font-weight: 600;
+    line-height: 150%;
+  }
+
+  &__day {
+    font-weight: 400;
+    line-height: 150%;
   }
 
   &__day--p {
     margin: 30px 0 0;
     list-style-type: none;
+    line-height: 150%;
   }
 
   &__adresses {
@@ -135,11 +148,17 @@
 
   &__adres {
     all: initial;
-    color: #0f0e08;
+    color: $black-text-color;
     font-family: 'IBM Plex Sans',sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 150%;
+  }
+
+  &__link {
+    color: #0f0e08;
+    text-decoration: none;
+    display: block;
   }
 
   &__href {
