added opacity to the additional menu

--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -76,7 +76,7 @@
     font-size: 18px;
     font-weight: 400;
     line-height: 150%;
-    
+
     @include on-tablet {
       line-height: 100%;
       margin-bottom: 64px;
@@ -147,6 +147,10 @@
     @include on-desktop {
       min-width: 70px;
       min-height: 70px;
+    }
+
+    &:hover {
+      transform: translateY(-10px)
     }
   }
 }
