--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -7,7 +7,7 @@ $grey-text-color: #687480;
 $red-page-color: #f14a27;
 $slider-buttons-color: #e0e0e0;
 $placeholder-color: #687480;
-$dim-page-color: #18181a;
+$dim-page-color: rgb(15, 14, 8);
 $line-text-color: rgba(255, 255, 255, 0.5);
 
 
