--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -31,6 +31,9 @@
     line-height: 150%;
     display: grid;
     position: relative;
+    z-index: 10;
+    position: fixed;
+    background-color: #1a5a4c;
 
     @include on-tablet {
       grid-template-columns: repeat(6,1fr);
@@ -147,6 +150,17 @@
       grid-row: 1;
       margin: 80px 0 0 40px;
     }
+  }
+
+  &__dark-bg {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    background-color: $dim-page-color;
   }
 }
 
