--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,12 @@
 @import 'utils';
-@import 'fonts';
-@import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import './block/header';
+@import './block/art-museum';
+@import './block/icon';
+@import './block/page';
+@import './block/menu';
+@import './block/title';
+@import './block/events';
+@import './block/lecture';
+@import './block/gallery';
+@import './block/subscribe';
+@import './block/footer';
